Add content module and button fixed

--- a/html-template/index3.html
+++ b/html-template/index3.html
@@ -25,9 +25,9 @@ me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:
     <div class="content-div">
         <div class="content-module"></div>
         <div class="saveappend"></div>
-        <div class="icon"></div
+        <div class="icon"></div>
     </div>
-    >
+
 </div>
 
 <script>
